<resources>
    <string name="app_name">Twitter Client</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="profile_image_description">Profile image</string>
    <string name="action_compose">Compose tweet</string>
    <string name="action_view_profile">View profile</string>
    <string name="tweet_button_text">Tweet</string>
    <string name="new_tweet_hint_text">What\'s happening?</string>
    <string name="log_out">Log out</string>
    <string name="user_name">Gevorg Kurghinyan</string>
    <string name="user_screen_name">gevorgkurghinyan</string>
    <string name="tweet_text">My first tweet</string>
    <string name="created_at_long">123123123</string>
    <string name="retweets">Retweets</string>
    <string name="likes">Likes</string>

    <string name="no_internet_text">No internet connection, getting data from local cache</string>
    <string name="snackbar_internet_action_text">Turn on Internet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search_title">Search</string>
</resources>
