<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.gevkurg.twitterclient.activities.TweetDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/BlueBackground"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarLayout"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:minHeight="50dp"
            android:minWidth="50dp"
            app:srcCompat="@android:color/black" />

        <TextView
            android:id="@+id/tvUserName"
            style="@style/BoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ivProfileImage"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/ivProfileImage"
            android:textColor="#DD000000"
            tools:text="@string/user_name" />

        <TextView
            android:id="@+id/tvUserScreenName"
            style="@style/SmallLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tvUserName"
            android:layout_below="@+id/tvUserName"
            tools:text="@string/user_screen_name" />

        <TextView
            android:id="@+id/tvTweetText"
            style="@style/RegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ivProfileImage"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:autoLink="all"
            android:linksClickable="true"
            android:text="@string/tweet_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColorLink="@color/twitterBlue" />

        <TextView
            android:id="@+id/tvCreatedAt"
            style="@style/SmallLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvTweetText"
            tools:text="@string/created_at_long" />

        <View
            android:id="@+id/hlCounts"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGray"
            android:layout_below="@+id/tvCreatedAt"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tvRetweetCount"
            style="@style/BoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/hlCounts"
            tools:text="1250" />

        <TextView
            android:id="@+id/tvRetweets"
            style="@style/LargeLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hlCounts"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@+id/tvRetweetCount"
            android:layout_alignBottom="@+id/tvRetweetCount"
            android:text="@string/retweets" />

        <TextView
            android:id="@+id/tvLikesCount"
            style="@style/BoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hlCounts"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/tvRetweets"
            tools:text="1250" />

        <TextView
            android:id="@+id/tvLike"
            style="@style/LargeLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hlCounts"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@+id/tvLikesCount"
            android:layout_alignBottom="@+id/tvLikesCount"
            android:text="@string/likes" />

        <View
            android:id="@+id/hlActionIcons"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGray"
            android:layout_below="@+id/tvRetweetCount"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <TableLayout
            android:id="@+id/tlActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hlActionIcons"
            android:paddingBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:stretchColumns="1">

            <TableRow>

                <ImageView
                    android:id="@+id/ivReply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hlActionIcons"
                    android:src="@drawable/icon_comment_24" />

                <ImageView
                    android:id="@+id/ivRetweet"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_toEndOf="@id/ivReply"
                    android:layout_below="@id/hlActionIcons"
                    android:layout_marginStart="72dp"
                    android:src="@drawable/icon_retweet_24"/>

                <ImageView
                    android:id="@+id/ivFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/tvRetweetCount"
                    android:layout_below="@id/hlActionIcons"
                    android:layout_marginStart="56dp"
                    android:src="@drawable/icon_favorite_24"/>

            </TableRow>

        </TableLayout>

    </RelativeLayout>
</RelativeLayout>